--- a/pagina/pagina.html
+++ b/pagina/pagina.html
@@ -76,10 +76,22 @@
       <p class="tituloSection3">NUESTROS SAFARIS DE LUJO A ÁFRICA</p>
       <div class="posicion">
         <div class="contenedorFotos">
+
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZAMBIQUE</p>
+              <div class="nombre">
+                <button>Boton 1</button>
+                <button>Boton 2</button>
+              </div>
+            </div>
+          </div>
+
+         <div class="fotos">
+            <img src="lion-3576031_640.jpg" />
+            <div class="botonesFotos">
+              <p class="lugar">MOZAMBIQUE</p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -90,19 +102,7 @@
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
-              <div class="nombre">
-                <button>Boton 1</button>
-                <button>Boton 2</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="fotos">
-            <img src="lion-3576031_640.jpg" />
-
-            <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZAMBIQUE</p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -113,7 +113,7 @@
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZAMBIQUE</p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -124,7 +124,7 @@
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZAMBIQUE</p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -135,7 +135,18 @@
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZAMBIQUE</p>
+              <div class="nombre">
+                <button>Boton 1</button>
+                <button>Boton 2</button>
+              </div>
+            </div>
+          </div>
+
+         <div class="fotos">
+            <img src="lion-3576031_640.jpg" />
+            <div class="botonesFotos">
+              <p class="lugar">MOZAMBIQUE</p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -146,7 +157,7 @@
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZAMBIQUE</p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -157,7 +168,7 @@
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZAMBIQUE</p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -168,7 +179,29 @@
           <div class="fotos">
             <img src="lion-3576031_640.jpg" />
             <div class="botonesFotos">
-              <p>nombre</p>
+              <p class="lugar">MOZ</p>
+              <div class="nombre">
+                <button>Boton 1</button>
+                <button>Boton 2</button>
+              </div>
+            </div>
+          </div>
+          
+          <div class="fotos">
+            <img src="lion-3576031_640.jpg" />
+            <div class="botonesFotos">
+              <p class="lugar">MOZAMBIQUE</p>
+              <div class="nombre">
+                <button>Boton 1</button>
+                <button>Boton 2</button>
+              </div>
+            </div>
+          </div>
+          
+          <div class="fotos">
+            <img src="lion-3576031_640.jpg" />
+            <div class="botonesFotos">
+              <p class="lugar">KENIAADSAWSDA       </p>
               <div class="nombre">
                 <button>Boton 1</button>
                 <button>Boton 2</button>
@@ -176,39 +209,9 @@
             </div>
           </div>
 
-          <div class="fotos">
-            <img src="lion-3576031_640.jpg" />
-            <div class="botonesFotos">
-              <p>nombre</p>
-              <div class="nombre">
-                <button>Boton 1</button>
-                <button>Boton 2</button>
-              </div>
-            </div>
-          </div>
 
-          <div class="fotos">
-            <img src="lion-3576031_640.jpg" />
-            <div class="botonesFotos">
-              <p>nombre</p>
-              <div class="nombre">
-                <button>Boton 1</button>
-                <button>Boton 2</button>
-              </div>
-            </div>
-          </div>
 
-          <div class="fotos">
-            <img src="lion-3576031_640.jpg" />
-            <div class="botonesFotos">
-              <p>nombre</p>
-              <div class="nombre">
-                <button>Boton 1</button>
-                <button>Boton 2</button>
-              </div>
-            </div>
-          </div>
-        </div>
+
       </div>
     </section>
   </body>
