ultimos cambios apple

--- a/apple/apple.html
+++ b/apple/apple.html
@@ -30,7 +30,7 @@
             </div>
             <a href="https://www.youtube.com/watch?v=p5Dfn_ml-04&list=RD6b2m4J6fn-Q&index=14">¿Has olvidado la contraseña?<i class="fa-solid fa-arrow-up-long" style="color: #4473c5;"></i></a>
             <img src="union.png">
-            <pre class="pre1">
+            <p class="pre1">
  Al configurar iniciar sesión con Apple, la información sobre 
   tus interacciones con Apple y este dispositivo puede ser
  utilizada por Apple para ayudar a evitar fraudes.<a href="https://fontawesome.com/search?o=r&m=free" >Consulta
